# dwd-hyras-tmax-trends

./: .gitignore  AGENTS.md  index.html  pyproject.toml
outputs/: dwd_hyras_tasmax_analysis.csv  dwd_hyras_tasmax_decadal_summary.csv  dwd_hyras_tasmax_linear_trends.csv  dwd_hyras_tasmax_trend_report.md  hot_days_threshold_counts.csv  hot_days_threshold_interactive.html  hot_days_threshold_station_counts.csv
src/dwd_hyras/: __init__.py  cli.py  download.py  plot.py  process.py  stations.py  thresholds.py
tests/: test_cli.py  test_download.py  test_process.py  test_thresholds.py
